# evrim-client

./: .coverage  .gitignore  .pre-commit-config.yaml  README.md  SUMMARY.md  coverage.xml  pyproject.toml  requirements.txt
.github/workflows/: ci.yaml
evrim/: __init__.py  client.py  models.py
tests/: conftest.py  test_client.py  test_evrim_from_expired__token  test_evrim_from_username_password  test_generate_docx_report  test_generate_pdf_report  test_get_report  test_get_report_not_found  test_get_run  test_get_run_not_found  test_get_runs  test_save_report_no_input  test_submit_research
