[tool.poetry]
name = "evrim-client"
version = "0.1.0"
description = "Simple to use client for Evrim"
authors = ["Chris <chris@evrim.ai>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
requests = "^2.32.3"
pydantic = "^2.9.1"

[tool.poetry.group.dev.dependencies]
pre-commit = "^3.8.0"
pytest = "^8.3.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
